--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,34 @@
-version: '3'
+version: "3.9"
+
 services:
   web:
-    build: 
-      context: .
-      dockerfile: 
-    image: basichtml
+    build: .
     ports:
-      - "8080:80"
+      - "3000:3000"
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      DB_HOST: db
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: demo
     volumes:
-      - .:/usr/share/nginx/html
+      - ./public:/app/public
+
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: demo
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 2s
+      timeout: 5s
+      retries: 10
+
+volumes:
+  db_data:
